--- a/ItemListCss/style.css
+++ b/ItemListCss/style.css
@@ -21,3 +21,9 @@ li a {
     padding: 14px 16px;
     box-shadow: inset 0px -3px #333333;
 }
+
+a:hover {
+    background-color: lightgrey;
+    padding: 14px 16px;
+    box-shadow: inset 0px -3px #333333;
+}
